[build-system]
requires = ["hatchling"]
build-backend = ["hatchling.build"]

[project]
name = "summarize"
version = "0.0.1"
dependencies = [
"asttokens==2.4.1",
"certifi==2024.2.2",
"cfgv==3.4.0",
"charset-normalizer==3.3.2",
"click==8.1.7",
"coverage[toml]==7.4.4",
"decorator==5.1.1",
"distlib==0.3.8",
"executing==2.0.1",
"filelock==3.13.4",
"fsspec==2024.3.1",
"huggingface-hub==0.22.2",
"identify==2.5.35",
"idna==3.7",
"iniconfig==2.0.0",
"ipdb==0.13.13",
"ipython==8.23.0",
"jedi==0.19.1",
"jinja2==3.1.3",
"markdown-it-py==3.0.0",
"markupsafe==2.1.5",
"matplotlib-inline==0.1.7",
"mdurl==0.1.2",
"mpmath==1.3.0",
"networkx==3.3",
"nodeenv==1.8.0",
"numpy==1.26.4",
"nvidia-cublas-cu12==12.1.3.1",
"nvidia-cuda-cupti-cu12==12.1.105",
"nvidia-cuda-nvrtc-cu12==12.1.105",
"nvidia-cuda-runtime-cu12==12.1.105",
"nvidia-cudnn-cu12==8.9.2.26",
"nvidia-cufft-cu12==11.0.2.54",
"nvidia-curand-cu12==10.3.2.106",
"nvidia-cusolver-cu12==11.4.5.107",
"nvidia-cusparse-cu12==12.1.0.106",
"nvidia-nccl-cu12==2.19.3",
"nvidia-nvjitlink-cu12==12.4.127",
"nvidia-nvtx-cu12==12.1.105",
"packaging==24.0",
"parso==0.8.4",
"pexpect==4.9.0",
"pillow==10.3.0",
"platformdirs==4.2.0",
"pluggy==1.4.0",
"pre-commit==3.7.0",
"prompt-toolkit==3.0.43",
"ptyprocess==0.7.0",
"pure-eval==0.2.2",
"pygments==2.17.2",
"pytest==8.1.1",
"pytest-cov==5.0.0",
"pytest-mock==3.14.0",
"pyyaml==6.0.1",
"regex==2024.4.16",
"requests==2.31.0",
"rich==13.7.1",
"ruff==0.4.1",
"safetensors==0.4.3",
"sentencepiece==0.2.0",
"shellingham==1.5.4",
"six==1.16.0",
"stack-data==0.6.3",
"sympy==1.12",
"tinydb==4.8.0",
"tokenizers==0.19.1",
"torch==2.2.2",
"torchaudio==2.2.2",
"torchvision==0.17.2",
"tqdm==4.66.2",
"traitlets==5.14.3",
"transformers==4.40.0",
"typer==0.12.3",
"typing-extensions==4.11.0",
"urllib3==2.2.1",
"virtualenv==20.25.3",
"wcwidth==0.2.13",
]
requires-python = ">=3.12"
authors = [
  { name="Jeff Jacobson", email="jeffjacobsonhimself@gmail.com" },
]
description = "A jazz repertoire management app"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["abstractive summary", "literature", "books", "LLM", "Pegasus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
    "Topic :: Text Processing :: Linguistic"
]

[project.urls]
Homepage = "https://github.com/jwjacobson/summarize"
Issues = "https://github.com/jwjacobson/summarize/issues"


[tool.ruff]
line-length = 100

target-version = "py312"


